# plumb

./: .gitignore  ERRORS.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
docs/: MANUAL.md  README.md
docs/commands/: add.md  diff.md  done.md  finish.md  go.md  next.md  restore.md  rm.md  rm.md.orig  start.md  status.md
docs/concepts/: items.md  sessions.md  snapshots.md  states.md  workspace.md
docs/examples/: typical-flow.md
milestones/: milestones-v0.1.md
plumb/: Cargo.toml
plumb/src/: cli.rs  diagnostic.rs  diff.rs  error.rs  fs.rs  helpers.rs  lib.rs  main.rs  output.rs  verbosity.rs  workspace.rs
plumb/src/commands/: add.rs  add.rs.orig  diff.rs  done.rs  finish.rs  go.rs  mod.rs  next.rs  restore.rs  rm.rs  start.rs  status.rs  status.rs.orig
plumb/src/store/: items.rs  items.rs.orig  mod.rs  session.rs  session.rs.orig
plumb/tests/: integration_add.rs  integration_add.rs.orig  integration_diff.rs  integration_done_next.rs  integration_finish.rs  integration_go.rs  integration_restore.rs  integration_rm.rs  integration_start.rs
plumb/tests/fixtures/diff/: deletion.diff  one_line_mod.diff
